agregar una clase login

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,6 +34,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProyectoFinal3
 excludes=
 file.reference.jcalendar-1.4.jar=D:\\progamacion II\\Proyecto final\\progreso\\ProyectoFinal2\\Librerias\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=C:\\Users\\alvar\\OneDrive\\Desktop\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-5.1.46.jar=conector\\mysql-connector-java-5.1.46.jar
 file.reference.mysql-connector-java-5.1.49.jar=driver-connector\\mysql-connector-java-5.1.49.jar
 includes=**
@@ -42,7 +43,8 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.mysql-connector-java-5.1.49.jar}:\
-    ${file.reference.mysql-connector-java-5.1.46.jar}
+    ${file.reference.mysql-connector-java-5.1.46.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
