--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -80,7 +80,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ProyectoFinal3
-main.class=Progreso.RegistroM
+main.class=Progreso.Inicio
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
